[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",     # missing docstring rules
]

[project]
name = "local-git-monitor"
version = "0.1.0"
description = "FastAPI dashboard for monitoring local git repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.116.0",
	"jinja2>=3.1.6",
	"uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
